--- a/3 - Vektoren/3 - Solution.Rmd
+++ b/3 - Vektoren/3 - Solution.Rmd
@@ -125,7 +125,7 @@ Wie können Sie daraus die Varianzen berechnen? Wie können Sie daraus den Stand
 
 ```{r}
 std <- c(1, 2.22, 11.3, 7.8, 3.4, 6)
-std**2  # Varianz
+std**2  # Varianzen
 std / sqrt(length(std))  # Standardfehler
 ```
 
